<resources>
    <string name="app_name">EmergencyAssistance</string>
    <string name="profile">Profile</string>
    <string name="defense_yourself">Defense Yourself</string>
    <string name="emergency_sound">Emergency Sound</string>
    <string name="setting">Setting</string>
    <string name="more">More</string>
    <string name="dialog_message_make_a_call">Would you want to make a call to</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings2</string>
    <string name="dialog_title_entercommand">Enter Your Command</string>
    <string name="dialog_message_entercommand" />
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_fake_sound">Emergency Sound</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_defense">Defense Yourself</string>
    <string name="title_activity_country">Change Country</string>
    <string name="change_country">Change Country</string>
    <string name="title_activity_emergency_contact">Contacts</string>
    <string name="select_country">Select your country in the edit text below to change your country</string>
    <string name="current_country">Current country: </string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="enable_take_picture">Enable Take Picture</string>
    <string name="enable_take_picture_desc">Taking a picture automatically while emergency is detected.</string>
    <string name="enable_record">Enable Record Audio</string>
    <string name="enable_record_desc">Recording automatically while emergency is detected.</string>
    <string name="enable_call_to">Direct Call To</string>
    <string name="enable_call_to_desc">Call/Dial automatically while emergency state is detected.</string>
    <string name="pref_header_speech">Speech commands</string>
    <string name="pref_header_emergency">Emergency Action</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_message">Would you want to enable GPS for better performance.</string>
    <string name="require_google_app">Google App</string>
    <string name="require_google_app_message">Please download Google App for recognizing speech.</string>
    <string name="timmer_cannot_be_0">Timmer cannot set to 0</string>
    <string name="alert_in_time">Alert in</string>
    <string name="setting_countdown_time">CountDown Time</string>
    <string name="setting_countdown_time_default">10</string>
    <string name="require_network">Enable Network</string>
    <string name="require_network_message">Would you want to enable Network for better performance.</string>
    <string name="setting_record_time_default">5</string>
    <string name="setting_record_time">Audio Record Time</string>
    <string name="template">Template</string>
    <string name="include_location">Include current location</string>
    <string name="select_contact">Select contacts</string>
    <string name="location_not_avaiable">Your location is temporary not available</string>
    <string name="cannot_load_data">Can\'t load data</string>
    <string name="tutorial">Tutorial</string>
    <string name="share">Share</string>
    <string name="continue_to_app">Continue to app</string>
    <string name="next">Next \></string>
    <string name="tutorial_title_1">Send your location to contacts</string>
    <string name="tutorial_title_2">Highly reduces rescue time</string>
    <string name="tutorial_title_3">Emergency assistance is smart</string>
    <string name="tutorial_desc_1">Your emergency contacts will receive a message with a link to the location of the accident, allowing them to call emergency services on your behalf and get help for you.</string>
    <string name="tutorial_desc_2">Emergency services will dispatch help you in record time thanks to your contacts call, highly reducing rescue time and saveing lives.</string>
    <string name="tutorial_desc_3">It work on the background and only when you are in a moving vehicle. No nead to open app every time you get on your car</string>
    <string name="share_app_content">This app can save your life in case of emergency. Download Emergency Assistance at https://www.dropbox.com/s/0ekdc21wot1vob2/app-debug.apk?dl=1</string>
    <string name="logout">Log Out</string>
    <string name="accelerometer">Accelerometer: </string>
    <string name="velocity">Velocity:</string>
    <string name="speed">Speed:</string>
    <string name="max_speed">Max Speed:</string>
    <string name="distance">Distance:</string>
    <string name="enable_contact_call">Enable contact call</string>
    <string name="enable_contact_call_desc">While emergency is detected, it\'ll call to first person in list contact instead of emergency number.</string>
    <string name="history">History</string>
    <string name="enable_contact_sms">Enable Contact SMS</string>
    <string name="enable_contact_sms_desc">While emergency is detected, it\'ll sms to first 3 persons in list contact instead of emergency number.</string>
    <string name="title_activity_follow">Follow</string>
    <string name="notifi_ticker_recognition">Listening for your help.</string>
    <string name="notifi_title_recognition">Detecting accident service.</string>
    <string name="notifi_text_recognition">Listening for your accident.</string>
    <string name="tutorial_title_4">Auto-detects serious car crashes</string>
    <string name="tutorial_desc_4">Uses the internal sensors of your phone and speed from your location to automatically detect if you have been in a serious car crash and sends your location to your emergency contacts, even if you can\'t.</string>
    <string name="require_permission_title">To keep you safe, we need the following permissions:</string>
    <string name="location">Location</string>
    <string name="permission_location_desc">We need to know your location so we can notify your contacts in case of emergency.</string>
    <string name="readwritesms">Read/Write SMS</string>
    <string name="permission_readwritesms_desc">Sending SMS allows us to inform your location to your emergency contacts in case of accident. Reading SMS lets us warn you if something has happened to them.</string>
    <string name="permission_phone_desc">When you are in an emergency, call directly from the app to your country\'s emergency services, or one of your emergency contacts.</string>
    <string name="grant_permission">GRANT PERMISSIONS</string>
    <string name="record_audio">Record Audio</string>
    <string name="permission_record_desc">When you are in an emergency, record audio from your app and save in a folder.</string>
    <string name="write">Write External</string>
    <string name="permission_write_desc">When you are in an emergency, we need to save image and audio to your folder.</string>
    <string name="camera">Camera</string>
    <string name="permission_camera_desc">When you are in an emergency, taking picture by rear and front camera then save in a folder.</string>
    <string name="template_follow_default">Follow me with this ID:\n</string>
    <string name="pref_header_detect">Auto detect accident</string>
    <string name="setting_auto_detect_countdown_time_default">30</string>
    <string name="manage">Manage</string>
    <string name="setting_detect_countdown_time">Detect Accident Countdown Time</string>
    <string name="enable_mute_beep_sound">Mute Beep Sound</string>
    <string name="enable_mute_beep_sound_desc">Mute the beep sound of speech recognizer while enable detect accident by speech.</string>
    <string name="enable_enable_volume">Enable Detect By Volumn Button</string>
    <string name="enable_enable_volume_desc">Enable detect emergency state by using volumn button(Hold volumn button).</string>

    <string-array name="commands_police">
        <item>Help</item>
        <item>Thieft</item>
        <item>Help me</item>
        <item>Can you help me</item>
        <item>Go away</item>
        <item>I\'ve bean</item>
        <item>Murderous</item>
        <item>Call a police</item>
        <item>I\'m lost</item>
    </string-array>
    <string-array name="commands_fire">
        <item>Fire</item>
    </string-array>
    <string-array name="commands_ambulance">
        <item>Call an ambulance</item>
        <item>I need a doctor</item>
    </string-array>

    <string-array name="templateMsg">
        <item>"I'm stuck,Help me."</item>
        <item>Hi.Need your help reach this place.</item>
        <item>In trouble, can you Help?</item>
        <item>Follow me,i am in trouble.</item>
        <item>Looking everything wired, Please come.</item>
    </string-array>
</resources>
