<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="setting_contact_call"
        android:summary="@string/enable_contact_call_desc"
        android:title="@string/enable_contact_call" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="setting_take_picture"
        android:summary="@string/enable_take_picture_desc"
        android:title="@string/enable_take_picture" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="setting_record_audio"
        android:summary="@string/enable_record_desc"
        android:title="@string/enable_record" />
    <EditTextPreference
        android:defaultValue="@string/setting_countdown_time_default"
        android:inputType="number"
        android:key="setting_countdown_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_countdown_time" />
    <EditTextPreference
        android:defaultValue="@string/setting_record_time_default"
        android:inputType="number"
        android:key="setting_record_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_record_time" />
</PreferenceScreen>
