<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/setting_countdown_time_default"
        android:inputType="number"
        android:key="setting_countdown_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_countdown_time" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="setting_take_picture"
        android:summary="@string/enable_take_picture_desc"
        android:title="@string/enable_take_picture" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="setting_record_audio"
        android:summary="@string/enable_record_desc"
        android:title="@string/enable_record" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="setting_call_to"
        android:summary="@string/enable_call_to_desc"
        android:title="@string/enable_call_to" />
</PreferenceScreen>
