<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_emergency_number2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <include layout="@layout/include_emergency_bar" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_emergency_number2">

        <fragment
            android:id="@+id/map_fragment"
            class="com.congnt.androidbasecomponent.view.fragment.MapFragmentWithFusedLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="80dp">
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"/>
        <EditText
            android:id="@+id/et_parse_id"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/layout_detect_accident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:minWidth="140dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/md_blue_grey_50"
        app:cardCornerRadius="@dimen/small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer" />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/tv_max_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_speed" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>